--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "16.7.13",
-    "@types/react": "18.0.7",
+    "@types/react": "^18.0.7",
     "@types/react-dom": "18.0.6",
     "generate-react-cli": "^7.3.0",
     "sass": "^1.54.5",
